fix z-index of nav landing

--- a/src/styles/sub_page/_landing.scss
+++ b/src/styles/sub_page/_landing.scss
@@ -24,7 +24,7 @@ $prefix: ".landing";
 
     &__nav {
         position: relative;
-        z-index: 5;
+        z-index: 9999;
         padding: 1rem 3vw;
         width: 100%;
 
